--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
         "backend:start": "cd udagram-api && npm run dev",
         "backend:deploy": "cd udagram-api && npm run deploy",
         "deploy": "npm run api:deploy && npm run frontend:deploy"
+    },
+    "dependencies": {
+        "yarn": "^1.22.19"
     }
 }
