--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,6 @@ jobs:
       - node/install:
           node-version: "14.15"
       - checkout
-      # Use root level package.json to install dependencies in the frontend app
       - run:
           name: Install Front-End Dependencies
           command: |
@@ -24,20 +23,19 @@ jobs:
             echo "NPM --version" 
             echo $(npm --version)
             npm run frontend:install
-      # TODO: Install dependencies in the the backend API
+      # Install dependencies in the the backend API
       - run:
           name: Install API Dependencies
           command: |
             echo "TODO: Install dependencies in the the backend API  "
             npm run backend:install
-      # TODO: Build the frontend app
+      # Build the frontend app
       - run:
           name: Front-End Build
           command: |
             echo "TODO: Build the frontend app"
-            npm run frontend:build
-            
-      # TODO: Build the backend API
+            npm run frontend:build   
+      # Build the backend API
       - run:
           name: API Build
           command: |
@@ -59,7 +57,6 @@ jobs:
           # TODO: Install, build, deploy in both apps
           command: |
             echo "# TODO: Install, build, deploy in both apps"
-
 workflows:
   udagram:
     jobs:
@@ -73,5 +70,4 @@ workflows:
           requires:
             - build
       - deploy:
-          requires:
-            - hold
+      
