--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,5 +61,13 @@ workflows:
   udagram:
     jobs:
       - build
+      # - hold:
+      #     filters:
+      #       branches:
+      #         only:
+      #           - master
+      #     type: approval
+      #     requires:
+      #       - build
       - deploy:
       
