--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,5 +69,7 @@ workflows:
       #     type: approval
       #     requires:
       #       - build
-      - deploy
+      - deploy:
+        requires:
+          - build
       
