--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -4,5 +4,5 @@ branch-defaults:
 global:
   application_name: arsanyeb
   default_platform: 64bit Amazon Linux 2017.09 v2.6.2 running Node.js 14 (Passenger Standalone)
-  default_region: us-west-1
+  default_region: us-east-1
   sc: git
