--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,14 +34,29 @@ jobs:
           name: Front-End Build
           command: |
             echo "TODO: Build the frontend app"
-            npm run frontend:build   
+            npm run frontend:build
       # Build the backend API
       - run:
           name: API Build
           command: |
             echo "TODO: Build the backend API"
             npm run backend:build
-  # deploy step will run only after manual approval
+  #test the app
+  test:
+    docker:
+      - image: "cimg/node:14.15"
+    steps:
+      - run:
+          name: Test Front-End
+          command: |
+            echo "TODO: Test the frontend app"
+            npm run frontend:test
+      - run:
+          name: Test API
+          command: |
+            echo "TODO: Test the backend API"
+            npm run backend:test
+  #deploy the app
   deploy:
     docker:
       - image: "cimg/base:stable"
@@ -56,20 +71,16 @@ jobs:
           name: Deploy App
           # TODO: Install, build, deploy in both apps
           command: |
-            echo "# TODO: Install, build, deploy in both apps"
+            echo "TODO: Deploy App"
+            npm run frontend:deploy
+            npm run backend:deploy
 workflows:
   udagram:
     jobs:
       - build
-      # - hold:
-      #     filters:
-      #       branches:
-      #         only:
-      #           - master
-      #     type: approval
-      #     requires:
-      #       - build
-      - deploy:
+      - test:
           requires:
             - build
-      
+      - deploy:
+          requires:
+            - test
