--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,12 @@ orbs:
   aws-cli: circleci/aws-cli@3.1.1
   # different jobs are calles later in the workflows sections
 jobs:
+  #set environment variables
+  set-env:
+    #set the environment variables
+    AWS_DEFAULT_REGION:us-east-1
+    AWS_SECRET_ACCESS_KEY:AKIAZRW7KEEFZ2YZARDJ
+    AWS_ACCESS_KEY_ID:hztS4kxiM1w9AxXb6/6dviF7NRmkmzcvOtPbmrPa
   build:
     docker:
       # the base image can run most needed actions with orbs
@@ -77,6 +83,7 @@ jobs:
 workflows:
   udagram:
     jobs:
+      - set-env
       - build
       - test:
           requires:
