--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
       - run:
           name: Test Front-End
           command: |
-            npm install karma --save-dev
+            sudo npm install -g karma-cli
             CHROME_BIN=/usr/bin/google-chrome karma start --single-run
             echo "TODO: Test the frontend app"
             npm run frontend:test
