--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,11 @@ jobs:
       - run:
           name: Test Front-End
           command: |
-            sudo npm install -g karma-cli
+            sudo npm install -g karma
+            wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
+            echo "deb http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google.list
+            apt-get update
+            apt-get install -y google-chrome-stable xvfb
             CHROME_BIN=/usr/bin/google-chrome
             echo "TODO: Test the frontend app"
             npm run frontend:test
