--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,8 @@ orbs:
   node: circleci/node@5.0.2
   eb: circleci/aws-elastic-beanstalk@2.0.1
   aws-cli: circleci/aws-cli@3.1.1
+  browser-tools: circleci/browser-tools@1.3.0
+
   # different jobs are calles later in the workflows sections
 jobs:
   #set environment variables
@@ -11,10 +13,12 @@ jobs:
     docker:
       # the base image can run most needed actions with orbs
       - image: "cimg/node:14.15"
+      - image: "cimg/node:13.12-browsers"
     steps:
       # install node and checkout code
       - node/install:
           node-version: "14.15"
+      - browser-tools/install-browser-tools
       - checkout
       - run:
           name: Install Front-End Dependencies
@@ -45,11 +49,6 @@ jobs:
       - run:
           name: Test Front-End
           command: |
-            sudo npm install -g karma
-            sudo wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add -
-            echo "deb http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google.list
-            sudo apt-get update
-            sudo apt-get install -y google-chrome-stable xvfb
             CHROME_BIN=/usr/bin/google-chrome
             echo "TODO: Test the frontend app"
             npm run frontend:test
