--- a/udagram-api/.ebextensions/env.config
+++ b/udagram-api/.ebextensions/env.config
@@ -4,6 +4,7 @@ option_settings:
     POSTGRES_USERNAME:postgres
     POSTGRES_PASSWORD:009661268Arsany
     POSTGRES_DB:postgres
+    POSTGRES_DB_PORT:5432
     POSTGRES_HOST:database-1.c5yunqkxdngy.us-east-1.rds.amazonaws.com
     AWS_REGION:us-east-1
     AWS_PROFILE:default
@@ -11,5 +12,5 @@ option_settings:
     AWS_SECRET_ACCESS_KEY:AKIAZRW7KEEFZ2YZARDJ
     AWS_ACCESS_KEY_ID:hztS4kxiM1w9AxXb6/6dviF7NRmkmzcvOtPbmrPa
     JWT_SECRET:my-super-strong-token
-    URL:http://udagramapi-env.eba-udqtxhgr.us-east-1.elasticbeanstalk.com/
+    URL:http://arsany-frontend.s3-website-us-east-1.amazonaws.com
     POSTGRES_DB_PORT:5432
