--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,11 +12,11 @@ jobs:
   build:
     docker:
       # the base image can run most needed actions with orbs
-      - image: "cimg/node:14.15-browsers"
+      - image: cimg/node:14.15-browsers
     steps:
       # install node and checkout code
       - node/install:
-          node-version: "14.15"
+          node-version: 14.15
       - browser-tools/install-browser-tools
       - checkout
       - run:
@@ -62,15 +62,21 @@ jobs:
             - udagram-frontend/www
   deploy:
     docker:
-      - image: "cimg/base:stable"
+      - image: cimg/base:stable
       # more setup needed for aws, node, elastic beanstalk
     steps:
       - restore_cache:
           keys:
             - v1-Back-build-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
+          paths:
+            - udagram-api/www
+      - restore_cache:
+          keys:
             - v1-front-build-{{ .Environment.CIRCLE_BRANCH }}-{{ .Environment.CIRCLE_SHA1 }}
+          paths:
+            - udagram-frontend/www
       - node/install:
-          node-version: "14.15"
+          node-version: 14.15
       - eb/setup
       - aws-cli/setup
       - checkout
