--- a/udagram-frontend/package.json
+++ b/udagram-frontend/package.json
@@ -7,7 +7,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "deploy": "aws s3 cp --recursive --acl public-read ./www/* s3://arsany-frontend/ && aws s3 cp --acl public-read --cache-control=\"max-age=0, no-cache, no-store, must-revalidate\" ./www/index.html s3://arsany-frontend/ ",
+    "deploy": "aws s3 cp --recursive --acl public-read ./www/ s3://arsany-frontend/ && aws s3 cp --acl public-read --cache-control=\"max-age=0, no-cache, no-store, must-revalidate\" ./www/index.html s3://arsany-frontend/ ",
     "test": "ng test --watch=false",
     "lint": "ng lint",
     "e2e": "ng e2e"
