--- a/udagram-api/.ebextensions/env.config
+++ b/udagram-api/.ebextensions/env.config
@@ -9,8 +9,8 @@ option_settings:
     AWS_REGION:us-east-1
     AWS_PROFILE:default
     AWS_BUCKET:arsany-media
-    AWS_SECRET_ACCESS_KEY:AKIAZRW7KEEFZ2YZARDJ
-    AWS_ACCESS_KEY_ID:hztS4kxiM1w9AxXb6/6dviF7NRmkmzcvOtPbmrPa
+    AWS_SECRET_ACCESS_KEY:AKIAZRW7KEEFXBCLAJDF
+    AWS_ACCESS_KEY_ID:E6JC66vcJcitqRrbSEvQLN1wrXJv0UXuSwmxefZq
     JWT_SECRET:my-super-strong-token
     URL:http://arsany-frontend.s3-website-us-east-1.amazonaws.com
     POSTGRES_DB_PORT:5432
