--- a/udagram-api/.elasticbeanstalk/config.yml
+++ b/udagram-api/.elasticbeanstalk/config.yml
@@ -1,12 +1,11 @@
 branch-defaults:
   default:
-    branch: master
-    group_suffix: null
+    environment: null
 global:
   application_name: udagram-api
   branch: null
   default_ec2_keyname: null
-  default_platform: Node.js
+  default_platform: Node.js 14 running on 64bit Amazon Linux 2
   default_region: us-east-1
   include_git_submodules: true
   instance_profile: null
