--- a/udagram-api/.ebextensions/env.config
+++ b/udagram-api/.ebextensions/env.config
@@ -1,16 +1,15 @@
 option_settings:
   aws:elasticbeanstalk:application:environment:
-    PORT:8080
-    POSTGRES_USERNAME:postgres
-    POSTGRES_PASSWORD:009661268Arsany
-    POSTGRES_DB:postgres
+    PORT:"8080"
+    POSTGRES_USERNAME:"postgres"
+    POSTGRES_PASSWORD:"009661268Arsany"
+    POSTGRES_DB:"postgres"
     POSTGRES_DB_PORT:5432
-    POSTGRES_HOST:database-1.c5yunqkxdngy.us-east-1.rds.amazonaws.com
-    AWS_REGION:us-east-1
-    AWS_PROFILE:default
-    AWS_BUCKET:arsany-media
-    AWS_SECRET_ACCESS_KEY:AKIAZRW7KEEFXBCLAJDF
-    AWS_ACCESS_KEY_ID:E6JC66vcJcitqRrbSEvQLN1wrXJv0UXuSwmxefZq
-    JWT_SECRET:my-super-strong-token
-    URL:http://arsany-frontend.s3-website-us-east-1.amazonaws.com
-    POSTGRES_DB_PORT:5432
+    POSTGRES_HOST:"database-1.c5yunqkxdngy.us-east-1.rds.amazonaws.com"
+    AWS_REGION:"us-east-1"
+    AWS_PROFILE:"default"
+    AWS_BUCKET:"arsany-media"
+    AWS_SECRET_ACCESS_KEY:"AKIAZRW7KEEFXBCLAJDF"
+    AWS_ACCESS_KEY_ID:"E6JC66vcJcitqRrbSEvQLN1wrXJv0UXuSwmxefZq"
+    JWT_SECRET:"my-super-strong-token"
+    URL:"http://arsany-frontend.s3-website-us-east-1.amazonaws.com"
