--- a/udagram-api/.ebextensions/env.config
+++ b/udagram-api/.ebextensions/env.config
@@ -9,7 +9,7 @@ option_settings:
     AWS_REGION: "us-east-1"
     AWS_PROFILE: "default"
     AWS_BUCKET: "arsany-media"
-    AWS_SECRET_ACCESS_KEY: "AKIAZRW7KEEFXBCLAJDF"
-    AWS_ACCESS_KEY_ID: "E6JC66vcJcitqRrbSEvQLN1wrXJv0UXuSwmxefZq"
+    AWS_SECRET_ACCESS_KEY: "AKIAZRW7KEEFWYDRHKPL"
+    AWS_ACCESS_KEY_ID: "gBTdzQdkXn6lTVVeSMmhkkQqLc/Ii0qLm47gS87j"
     JWT_SECRET: "my-super-strong-token"
     URL: "http://arsany-frontend.s3-website-us-east-1.amazonaws.com"
