--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,4 @@
 version: 2.1
-Branches:
-  only:
-    - main
 orbs:
   # orgs contain basc recipes and reproducible actions (install node, aws, etc.)
   node: circleci/node@5.0.2
@@ -111,7 +108,14 @@ workflows:
   udagram:
     jobs:
       - build
-
+        filters:
+          branches:
+            only:
+              - main
       - deploy:
           requires:
             - build
+          filters:
+          branches:
+            only:
+              - main
