filter by main branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,15 +107,15 @@ jobs:
 workflows:
   udagram:
     jobs:
-      - build
-        filters:
-          branches:
-            only:
-              - main
+      - build:
+          filters:
+            branches:
+              only:
+                - main
       - deploy:
           requires:
             - build
           filters:
-          branches:
-            only:
-              - main
+            branches:
+              only:
+                - main
