--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -102,8 +102,10 @@ jobs:
             echo "TODO: Deploy App"
             pip3 install --upgrade awscli
             echo "TODO: set eb environment Variables"
-            eb setenv PORT={{PORT}} POSTGRES_USERNAME={{POSTGRES_USERNAME}} POSTGRES_PASSWORD={{POSTGRES_PASSWORD}} POSTGRES_DB={{POSTGRES_DB}} POSTGRES_DB_PORT={{POSTGRES_DB_PORT}} POSTGRES_HOST={{POSTGRES_HOST}} AWS_REGION={{AWS_REGION}} AWS_PROFILE={{AWS_PROFILE}} AWS_BUCKET={{AWS_BUCKET}} AWS_SECRET_ACCESS_KEY={{AWS_SECRET_ACCESS_KEY}} AWS_ACCESS_KEY_ID={{AWS_ACCESS_KEY_ID}} JWT_SECRET={{JWT_SECRET}} URL={{URL}}
-
+            cd ~/project/udagram-api
+            echo ${PORT}
+            eb setenv PORT=$PORT POSTGRES_USERNAME=$POSTGRES_USERNAME POSTGRES_PASSWORD=$POSTGRES_PASSWORD POSTGRES_DB=$POSTGRES_DB POSTGRES_DB_PORT=$POSTGRES_DB_PORT POSTGRES_HOST=$POSTGRES_HOST AWS_REGION=$AWS_REGION AWS_PROFILE=$AWS_PROFILE AWS_BUCKET=$AWS_BUCKET AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID JWT_SECRET=$JWT_SECRET URL=$URL 
+            cd ..
       - run:
           name: Deploy App
           command: |
